cleaning up tests

--- a/docs/assets/main.ejs
+++ b/docs/assets/main.ejs
@@ -35,7 +35,7 @@
       <% } %>
     </div>
   </div>
-  <script src="<%= base %>/main.js"></script>
+  <script src="<%= base %>/withRoute.js"></script>
   <script>
     window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
     ga('create','UA-33821884-1','auto');ga('send','pageview')
